@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
-    <version>1.18.8</version>
+    <version>1.18.9</version>
 
     <name>oap</name>
 
@@ -77,17 +77,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
 
-        <testng.version>6.9.9</testng.version>
+        <testng.version>6.9.10</testng.version>
         <assertj.version>3.3.0</assertj.version>
         <guava.version>19.0</guava.version>
-        <logback.version>1.1.3</logback.version>
+        <logback.version>1.1.7</logback.version>
         <slf4j.version>1.7.21</slf4j.version>
-        <httpcomponents.version>4.4.4</httpcomponents.version>
-        <compress.version>1.10</compress.version>
-        <joda.version>2.9.3</joda.version>
+        <httpcomponents.version>4.4.5</httpcomponents.version>
+        <compress.version>1.12</compress.version>
+        <joda.version>2.9.4</joda.version>
         <metrics.version>3.1.2</metrics.version>
         <jackson.version>2.7.1</jackson.version>
-        <lombok.version>1.16.6</lombok.version>
+        <lombok.version>1.16.8</lombok.version>
         <reflections.version>0.9.10</reflections.version>
     </properties>
 
@@ -96,7 +96,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>3.5.1</version>
                 <configuration>
                     <useIncrementalCompilation>true</useIncrementalCompilation>
                     <compilerArgs>
@@ -108,7 +108,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.19.1</version>
                 <configuration>
                     <argLine>
                         -ea -Xmx1000m -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled
@@ -132,7 +132,7 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <version>2.4</version>
+                <version>3.0.1</version>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
                     <execution>
@@ -146,7 +146,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.0.1</version>
+                <version>1.4.1</version>
                 <executions>
                     <execution>
                         <id>enforce</id>
@@ -173,10 +173,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19</version>
+                        <version>2.19.1</version>
                         <configuration>
                             <argLine>
-                                -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -Xmx6G
                                 -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-perf.xml
                             </argLine>
                             <testFailureIgnore>true</testFailureIgnore>
